# spotify_playlist_migration

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/spotify_migrator/: __init__.py  __main__.py
src/spotify_migrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/spotify_migrator/api/: __init__.py  client.py  exceptions.py
src/spotify_migrator/auth/: __init__.py  exceptions.py  manager.py
src/spotify_migrator/models/: __init__.py  migration.py  playlist.py  track.py
src/spotify_migrator/services/: __init__.py  migrator.py  pagination.py
src/spotify_migrator/store/: __init__.py  config_store.py  token_store.py
src/spotify_migrator/tui/: __init__.py  app.py
src/spotify_migrator/tui/screens/: __init__.py  auth.py  home.py  logs.py  migrate.py  playlists.py  setup.py
src/spotify_migrator/tui/widgets/: __init__.py  playlist_list.py  progress.py  status.py
tests/: conftest.py
tests/test_api/: test_client.py
tests/test_auth/: __init__.py  test_auth_manager.py
tests/test_models/: test_migration.py  test_playlist.py  test_track.py
tests/test_services/: test_migrator.py
tests/test_store/: __init__.py  test_token_store.py
tests/test_tui/: __init__.py  test_app.py
